update video section

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
                 <button class="filter-btn py-2 px-4 rounded-full text-sm font-semibold bg-secondary-dark text-gray-300 hover:bg-accent hover:text-primary-dark transition duration-200" data-filter="web-dev">Web Dev</button>
                 <button class="filter-btn py-2 px-4 rounded-full text-sm font-semibold bg-secondary-dark text-gray-300 hover:bg-accent hover:text-primary-dark transition duration-200" data-filter="ui-ux">UI/UX</button>
                 <button class="filter-btn py-2 px-4 rounded-full text-sm font-semibold bg-secondary-dark text-gray-300 hover:bg-accent hover:text-primary-dark transition duration-200" data-filter="branding">Branding</button>
+                <button class="filter-btn py-2 px-4 rounded-full text-sm font-semibold bg-secondary-dark text-gray-300 hover:bg-accent hover:text-primary-dark transition duration-200" data-filter="video">Video</button>
+                <button class="filter-btn py-2 px-4 rounded-full text-sm font-semibold bg-secondary-dark text-gray-300 hover:bg-accent hover:text-primary-dark transition duration-200" data-filter="photography">Photography</button>
             </div>
             <div id="portfolio-carousel" class="portfolio-carousel flex overflow-x-scroll snap-x snap-mandatory space-x-6 pb-4"></div>
         </section>
